fix: opportunity route
