# api/swagger.yaml
@@ -1375,6 +1375,72 @@ definitions:
             amount:
               description: 預期收入金額
               type: number
+            close_date:
+              description: 商機結束日期
+              type: string
+            created_at:
+              description: 創建時間
+              type: string
+            created_by:
+              description: 創建者
+              type: string
+            deleted_at:
+              description: 刪除時間
+              type: string
+            forecast_category:
+              description: 商機預測種類
+              type: string
+            name:
+              description: 商機名稱
+              type: string
+            opportunity_id:
+              description: 商機ID
+              type: string
+            stage:
+              description: 商機階段
+              type: string
+            updated_at:
+              description: 更新時間
+              type: string
+            updated_by:
+              description: 更新者
+              type: string
+          type: object
+        type: array
+      page:
+        description: 頁數(請從1開始帶入)
+        type: integer
+      pages:
+        description: 總頁數
+        type: integer
+      total:
+        description: 總筆數
+        type: integer
+    required:
+    - limit
+    - page
+    type: object
+  opportunities.ListCampaigns:
+    properties:
+      limit:
+        description: 筆數(請從1開始帶入,最高上限20)
+        type: integer
+      opportunities:
+        description: 多筆
+        items:
+          properties:
+            account_id:
+              description: 帳戶ID
+              type: string
+            account_name:
+              description: 帳戶名稱
+              type: string
+            activated_at:
+              description: 啟用時間
+              type: string
+            amount:
+              description: 預期收入金額
+              type: number
             campaigns:
               description: opportunity_campaigns data
               items:
@@ -1426,6 +1492,51 @@ definitions:
     - page
     type: object
   opportunities.Single:
+    properties:
+      account_id:
+        description: 帳戶ID
+        type: string
+      account_name:
+        description: 帳戶名稱
+        type: string
+      activated_at:
+        description: 啟用時間
+        type: string
+      amount:
+        description: 預期收入金額
+        type: number
+      close_date:
+        description: 商機結束日期
+        type: string
+      created_at:
+        description: 創建時間
+        type: string
+      created_by:
+        description: 創建者
+        type: string
+      deleted_at:
+        description: 刪除時間
+        type: string
+      forecast_category:
+        description: 商機預測種類
+        type: string
+      name:
+        description: 商機名稱
+        type: string
+      opportunity_id:
+        description: 商機ID
+        type: string
+      stage:
+        description: 商機階段
+        type: string
+      updated_at:
+        description: 更新時間
+        type: string
+      updated_by:
+        description: 更新者
+        type: string
+    type: object
+  opportunities.SingleCampaigns:
     properties:
       account_id:
         description: 帳戶ID
@@ -4816,6 +4927,109 @@ paths:
                   type: string
               type: object
       summary: 更新單一商機
+      tags:
+      - opportunity
+  /opportunities/campaigns:
+    get:
+      consumes:
+      - application/json
+      description: 取得全部商機包含影響的行銷活動
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 目前頁數,請從1開始帶入
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: 一次回傳比數,請從1開始帶入,最高上限20
+        in: query
+        name: limit
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  $ref: '#/definitions/opportunities.ListCampaigns'
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 取得全部商機包含影響的行銷活動
+      tags:
+      - opportunity
+  /opportunities/campaigns/{opportunityID}:
+    get:
+      consumes:
+      - application/json
+      description: 取得單一商機包含影響的行銷活動
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 商機ID
+        in: path
+        name: opportunityID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  $ref: '#/definitions/opportunities.SingleCampaigns'
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 取得單一商機包含影響的行銷活動
       tags:
       - opportunity
   /orders:
