# internal/router/opportunity/opportunity_router.go
@@ -13,7 +13,9 @@ func GetRouter(router *gin.Engine, db *gorm.DB) *gin.Engine {
 	{
 		v10.POST("", middleware.Transaction(db), control.Create)
 		v10.GET("", control.GetByList)
+		v10.GET("campaigns", control.GetByListCampaigns)
 		v10.GET(":opportunityID", control.GetBySingle)
+		v10.GET("campaigns/:opportunityID", control.GetBySingleCampaigns)
 		v10.DELETE(":opportunityID", control.Delete)
 		v10.PATCH(":opportunityID", control.Update)
 	}
